Added initial template for top-bar / nav component

--- a/yield/src/index.html
+++ b/yield/src/index.html
@@ -10,7 +10,7 @@
     <link href="/dist/output.css" rel="stylesheet">
   </head>
 
-  <body class="text-stone-400">
+  <body class="text-[#9DACC6]">
     <app-root></app-root>
   </body>
 
