--- a/yield/src/index.html
+++ b/yield/src/index.html
@@ -10,7 +10,7 @@
     <!-- <link href="/dist/output.css" rel="stylesheet"> -->
   </head>
 
-  <body class="text-[#9DACC6]">
+  <body>
     <app-root></app-root>
   </body>
 
