--- a/yield/src/index.html
+++ b/yield/src/index.html
@@ -8,10 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- <link href="/dist/output.css" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Big+Shoulders+Display:wght@400;700;900&family=Coming+Soon&family=Didact+Gothic&family=Pathway+Gothic+One&family=Red+Hat+Display:wght@500&family=Reenie+Beanie&family=Slackside+One&family=Unica+One&family=VT323&display=swap" rel="stylesheet">  
+  
+    
   </head>
 
   <body>
-    <app-root>
-    </app-root>
+    <app-root></app-root>
   </body>
 </html>
